--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "A cool bot to do cool things.",
     "main": "src/index.js",
     "scripts": {
+        "build": "tsc && tsc-alias",
         "test": "nodemon out/src/index.js",
         "depcom": "node out/src/deploy-commands.js",
         "start": "node out/src/index.js"
@@ -20,6 +21,7 @@
     },
     "devDependencies": {
         "eslint": "^8.24.0",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "tsc-alias": "^1.8.8"
     }
 }
